--- a/package.json
+++ b/package.json
@@ -9,19 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.3"
+    "@coinbase/cdp-sdk": "^1.0.0",
+    "@coinbase/x402": "^0.4.0",
+    "@pinata/sdk": "^2.1.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-query": "^5.0.0",
+    "@wagmi/core": "^2.17.3",
+    "axios": "^1.10.0",
+    "lucide-react": "^0.517.0",
+    "next": "^15.3.3",
+    "openai": "^5.5.1",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hot-toast": "^2.5.2",
+    "react-markdown": "^10.1.0",
+    "viem": "^2.31.3",
+    "wagmi": "^2.15.6",
+    "x402-next": "^0.4.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.3",
-    "@eslint/eslintrc": "^3"
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^20.19.1",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
   }
 }
