--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
+    "remark-gfm": "^3.0.1",
+    "rehype-raw": "^6.1.1",
+    "remove-markdown": "^0.6.2",
     "viem": "^2.31.3",
     "wagmi": "^2.15.6",
     "x402-next": "^0.4.0"
